<resources>
    <string name="app_name">Populife</string>
    <string name="note_network_error">Network connection failed, please confirm to enable WiFi or cellular network</string>
    <string name="nav_tab_lock">Device</string>
    <string name="nav_tab_general">Discovery</string>
    <string name="nav_tab_me">Profile</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sign_in">Login</string>
    <string name="enter_phone_num">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_pwd">Enter password</string>
    <string name="enter_new_pwd">Enter new password</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_pwd">Reset password</string>
    <string name="note_pwd_wrong_times">You\'ve entered the wrong password too many times. Do you forget your password?</string>
    <string name="enter_verifiction_code">Enter verification code</string>
    <string name="note_verifiction_code_invalid">Verification code is invalid</string>
    <string name="get_code">Get code</string>
    <string name="notification">Notification</string>
    <string name="message_detail">Notification detail</string>
    <string name="help_center">Help center</string>
    <string name="gateway">Gateway</string>
    <string name="settings">Settings</string>
    <string name="account">Account:\</string>
    <string name="nick_name">Nickname</string>
    <string name="modify_pwd">Modify Password</string>
    <string name="touch_id_login">Touch ID Login</string>
    <string name="biometric_login_title">Biometric Verification</string>
    <string name="biometric_login_desc">Log in using your biometric credential</string>
    <string name="switch_language">Switch language</string>
    <string name="language_system">Follow system</string>
    <string name="sign_out">Sign out</string>
    <string name="select_lock">Select lock</string>
    <string name="delete_account">Delete account</string>
    <string name="save">Save</string>
    <string name="lock_users">Lock users</string>
    <string name="lock_group">Lock group</string>
    <string name="other_uppercase">Other</string>
    <string name="other_lowercase">other</string>
    <string name="about">About</string>
    <string name="copyright_claim">Copyright© 2018-%d Populife All Rights Reserved</string>
    <string name="common_questions">Common questions</string>
    <string name="customer_feedback">Customer feedback</string>
    <string name="online_communication">Online communication</string>
    <string name="user_manual_app">App user manual</string>
    <string name="user_manual_deadbolt">Deadbolt user manual</string>
    <string name="user_manual_keybox">Keybox user manual</string>
    <string name="user_manual_gateway">Gateway user manual</string>
    <string name="send_email">Send email</string>
    <string name="note_nickname_format">Note: no more than 20 characters</string>
    <string name="modify_nickname">Modify nickname</string>
    <string name="bind_email">Bind email</string>
    <string name="bind_phone">Bind phone</string>
    <string name="bind">Bind</string>
    <string name="current_pwd">Current password</string>
    <string name="new_pwd">New password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="note_modify_pwd_success">Modify password successfully</string>
    <string name="note_modify_pwd_fail">Modify password failed</string>
    <string name="note_current_pwd_incorrect">Current password is incorrect</string>
    <string name="note_pwd_format">Password must be 6-20 characters</string>
    <string name="note_confirm_pwd">Please confirm your password</string>
    <string name="note_success_get_verification_code_phone">A verification code has been sent to your phone</string>
    <string name="note_success_get_verification_code_email">A verification code has been sent to your email</string>
    <string name="note_get_verification_code_fail">Get verification code failed</string>
    <string name="note_get_verification_code_success">Get verification code successfully</string>
    <string name="note_get_verification_code_time_limit">Verification code has been accessed too many times today, please try tomorrow</string>
    <string name="note_phone_has_been_registered">The phone number has been registered</string>
    <string name="note_email_has_been_registered">The email has been registered</string>
    <string name="note_phone_has_not_been_registered">The phone number has not been registered</string>
    <string name="note_email_has_not_been_registered">The email has not been registered</string>
    <string name="note_phone_or_pwd_incorrect">Phone number or password is incorrect</string>
    <string name="note_email_or_pwd_incorrect">Email or password is incorrect</string>
    <string name="note_phone_invalid">Phone number is invalid</string>
    <string name="note_email_invalid">Email is invalid</string>
    <string name="note_sign_in_fail">Log in failed</string>
    <string name="note_register_fail">Register failed</string>
    <string name="note_delete_account">After deleting the account, all the data will be deleted and cannot be recovered. Sure to delete?</string>
    <string name="note_reset_pwd_success">Reset password successfully</string>
    <string name="note_reset_pwd_fail">Reset password failed</string>
    <string name="note_delete_account_success">Delete account successfully</string>
    <string name="note_delete_account_fail">Delete account failed</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="note_exit">Sure to sign out?</string>
    <string name="note_clear_notifications">Sure to clear all the notifications?</string>
    <string name="clear">Clear</string>
    <string name="note_clear_notifications_success">Clear notifications successfully</string>
    <string name="note_clear_notifications_fail">Clear notifications failed</string>
    <string name="note_delete_notification">Sure to delete the notification?</string>
    <string name="note_delete_notification_fail">Delete notification failed</string>
    <string name="note_delete_feedback">Sure to delete the feedback?</string>
    <string name="note_delete_feedback_fail">Delete feedback failed</string>
    <string name="feedback">Feedback</string>
    <string name="new_feedback">New feedback</string>
    <string name="hint_feedback_input">Please input the problems you have encountered or any better suggestions. We are looking forward to hearing from you.</string>
    <string name="submit">Submit</string>
    <string name="input_something">Please input something</string>
    <string name="note_submit_feedback_fail">Submit feedback failed</string>
    <string name="no_data">No data</string>
    <string name="lock_group_add">Add new group</string>
    <string name="lock_group_modify">Modify group name</string>
    <string name="note_name_already_exists">The name already exists</string>
    <string name="note_add_group_fail">Add new group failed</string>
    <string name="note_modify_group_fail">Modify group name failed</string>
    <string name="note_delete_group">Sure to delete the group?</string>
    <string name="note_delete_group_fail">Delete group failed</string>
    <string name="note_nothing_changed">Nothing changed</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="note_modify_nickname_fail">Modify nickname failed</string>
    <string name="note_modify_name_success">Modify name successfully</string>
    <string name="note_modify_name_fail">Modify name failed</string>
    <string name="lock_add">Add lock</string>
    <string name="phone_near_lock">The phone should be near the lock</string>
    <string name="next">Next</string>
    <string name="note_passcode_format">Note: Please enter a 6-9 digits</string>
    <string name="next_step">continue</string>
    <string name="add_key_box_lock_pre_check_hint">Before you start pairing the Keybox, make sure the following steps are completed.</string>
    <string name="add_lock_pre_check_hint2">Tap the circle when you\'re done:</string>
    <string name="bt_open_hint">1. Phone bluetooth has been turned on</string>
    <string name="bt_lbs_open_hint">2. If it is an Andriod phone, location service and admission has been turned on</string>
    <string name="net_open_hint">3. Connected to Wifi or turned on the cellular network of phone</string>
    <string name="key_box_battery_install_hint">4. 4 fully charged AAA batteries has been installed properly in Keybox (so that keypad can light up when you touch it)</string>
    <string name="key_box_distance_confirm">5. Make sure that the Keybox is within 3 meters of the phone Bluetooth</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="the_following">You can do either of the following: </string>
    <string name="the_following_detail_deadbolt">1. Restart Bluetooth and Internet connection on your phone\n2. Restart Populife App on your phone\n3. Pair the deadbolt again</string>
    <string name="try_pairing_again">Try pairing again</string>
    <string name="back_to_smart">Back to Device</string>
    <string name="permission_types">Permission types</string>
    <string name="general_user">General user</string>
    <string name="authorized_user">Authorized user</string>
    <string name="general_user_hint">*The receiver can only use the key to unlock</string>
    <string name="modify_lock_info_hint">The information will be modify when the receiver\'s APP connects to network</string>
    <string name="note_pwd_edit_effective_period_hint">Make sure you are near the device or have already connected to the gateway before motifying the information</string>
    <string name="original_pin_code">Original PIN code</string>
    <string name="new_pin_code">New PIN code</string>
    <string name="please_enter_digits_number">Please enter 6-9 digits number</string>
    <string name="setting_transfer_subtitle">Transfer Lock to Another User</string>
    <string name="setting_transfer_desc">Transfer full ownership of the lock to another Populife App user without resetting the lock. All existing passcodes, digital keys, and unlock records will transfer to the new admin\'s app.</string>
    <string name="setting_transfer_link_pre">Want to share access instead of transferring the lock?</string>
    <string name="ekey_permission_hint_1">Unlock via the app</string>
    <string name="ekey_permission_hint_2">View unlock history</string>
    <string name="ekey_permission_hint_3">Add passcodes or digital keys</string>
    <string name="ekey_permission_1_title">manage all user passcodes and keys</string>
    <string name="ekey_permission_2_title">Allow remote unlocking</string>
    <string name="ekey_permission_3_title">Sync lockbox battery level</string>
    <string name="ekey_permission_4_title">Calibrate the lockbox time</string>
    <string name="ekey_permission_1_hint">When enabled, the user can view and manage all passcodes and keys for this lock, similar to an admin. If disabled, they can only see keys and passcode they\'ve created.</string>
    <string name="ekey_permission_2_hint">Grants permission to unlock remotely, but requires a connected gateway and a stable WiFi connection. Actual remote access depends on the admin’s setup.</string>
    <string name="ekey_permission_3_hint">Allows the user to manually check the lock\'s battery level to help ensure timely battery replacement.</string>
    <string name="ekey_permission_4_hint">Lets the user sync the lockbox time with their phone\'s clock. This is useful if the lock has been without power for a while. Note: the lockbox\'s time zone remains unchanged.</string>
</resources>