<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/ll_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">


    <com.populstay.populife.ui.SwitchTooltipView
        android:id="@+id/stv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checked="false"
        app:titleText="@string/ekey_permission_1_title"
        app:tooltipText="@string/ekey_permission_1_hint" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#F7F7F7"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">
            <com.populstay.populife.ui.IconSwitchItemView
                android:id="@+id/isiv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:iconSrc="@mipmap/ic_permission_unlock"
                app:titleText="@string/ekey_permission_hint_1" />

            <com.populstay.populife.ui.IconSwitchItemView
                android:id="@+id/isiv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:iconSrc="@mipmap/ic_permission_history"
                app:titleText="@string/ekey_permission_hint_2" />

            <com.populstay.populife.ui.IconSwitchItemView
                android:id="@+id/isiv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:iconSrc="@mipmap/ic_permission_add_key"
                app:titleText="@string/ekey_permission_hint_3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#DDDDDD" />

            <com.populstay.populife.ui.SwitchTooltipView
                android:id="@+id/stv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="false"
                app:titleText="@string/ekey_permission_2_title"
                app:tooltipText="@string/ekey_permission_2_hint" />

            <com.populstay.populife.ui.SwitchTooltipView
                android:id="@+id/stv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="false"
                app:titleText="@string/ekey_permission_3_title"
                app:tooltipText="@string/ekey_permission_3_hint" />

            <com.populstay.populife.ui.SwitchTooltipView
                android:id="@+id/stv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="false"
                app:titleText="@string/ekey_permission_4_title"
                app:tooltipText="@string/ekey_permission_4_hint" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
