<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_view_titlebar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/fail_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/something_went_wrong"
        android:textColor="@color/common_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_the_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp"
        android:text="@string/the_following"
        android:textColor="@color/common_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_the_following_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/the_following_detail_deadbolt"
        android:textColor="@color/text_color_ff0f1110"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_try_pairing_again"
        style="@style/btn_style_main"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:text="@string/try_pairing_again" />

    <TextView
        android:id="@+id/tv_back_to_smart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="@dimen/common_page_left_right_space"
        android:text="@string/back_to_smart"
        android:textColor="@color/text_color_ffb1b3b6"
        android:textSize="16sp" />

</LinearLayout>
