<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/common_page_left_right_space"
    android:layout_marginRight="@dimen/common_page_left_right_space"
    android:orientation="vertical">

    <include layout="@layout/layout_view_titlebar"/>

    <TextView
        android:layout_marginTop="@dimen/dimens_dp_20"
        android:textSize="16sp"
        android:textColor="@color/common_text_color"
        android:text="@string/original_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        app:hint="@string/please_enter_digits_number"
        app:inputType="number"
        app:maxLength="20"
        android:id="@+id/et_modify_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dimens_dp_20"
        android:textSize="16sp"
        android:textColor="@color/common_text_color"
        android:text="@string/new_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        app:hint="@string/please_enter_digits_number"
        app:inputType="number"
        app:maxLength="20"
        android:id="@+id/et_modify_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        android:visibility="gone"
        app:hint="@string/please_enter_digits_number"
        app:inputType="number"
        app:maxLength="20"
        android:id="@+id/et_modify_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/note_pwd_format"
        android:textColor="@color/text_gray_light"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_save_btn"
        style="@style/btn_style_main"
        android:layout_marginTop="@dimen/sign_action_btn_margin_top"
        android:background="@drawable/selector_btn_main"
        android:enabled="false"
        android:text="@string/save" />

    <TextView
        android:layout_marginTop="@dimen/dimens_dp_10"
        android:id="@+id/tv_create_custom_pwd_tips_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:paddingTop="@dimen/dimens_dp_10"
        android:paddingBottom="@dimen/dimens_dp_10"
        android:text="@string/note_pwd_edit_effective_period_hint"
        android:textColor="@color/text_color_ff0f1110"
        android:layout_marginBottom="20dp"
        android:textSize="12sp" />

</LinearLayout>