<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_view_titlebar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="@dimen/dimens_dp_20"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:text="@string/original_pin_code"
        android:textColor="@color/common_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_original_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="@dimen/dimens_dp_20"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:textColor="@color/text_gray_light"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="@dimen/dimens_dp_20"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:text="@string/new_pin_code"
        android:textColor="@color/common_text_color"
        android:textSize="16sp" />

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        android:id="@+id/et_modify_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        app:hint="@string/please_enter_digits_number"
        app:inputType="number"
        app:maxLength="9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="8dp"
        android:text="@string/note_passcode_format"
        android:textColor="@color/gray_medium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_save"
        style="@style/btn_style_main"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginTop="@dimen/sign_action_btn_margin_top"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:background="@drawable/selector_btn_main"
        android:enabled="false"
        android:text="@string/save" />

</LinearLayout>
