<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include layout="@layout/layout_view_titlebar"/>

    <LinearLayout
        android:orientation="vertical"
        style="@style/list_item_overall">

        <TextView
            style="@style/list_item_title"
            android:text="@string/permission_types"/>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_permission_types"
                style="@style/list_item_description2"
                android:text="@string/app_name"/>


        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_permission_panel" android:id="@+id/vpp_permission"/>

    <TextView
        android:id="@+id/tv_save_btn"
        style="@style/btn_style_main"
        android:layout_marginLeft="@dimen/common_page_left_right_space"
        android:layout_marginRight="@dimen/common_page_left_right_space"
        android:layout_marginTop="@dimen/sign_action_btn_margin_top"
        android:background="@drawable/selector_btn_main"
        android:text="@string/save" />


</androidx.appcompat.widget.LinearLayoutCompat>